fix: adjust text sizes and spacing in curriculum list and navbar; update project title translation

--- a/src/app/shared/components/navbar/navbar.component.css
+++ b/src/app/shared/components/navbar/navbar.component.css
@@ -68,7 +68,7 @@ a:active::after {
 }
 
 .language-selector {
-  @apply flex items-center cursor-pointer  px-2 font-black italic h-full gap-1 select-none;
+  @apply flex items-center cursor-pointer mx-4 font-black italic h-full gap-1 select-none;
 }
 .language-selector img {
   @apply size-6;
